# banking-data-platform

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
airflow/config/: airflow.cfg
airflow/dags/: batch_pipeline_dag.py
airflow/dags/ingestion/: batch_pipeline_dag.py  streaming_to_bq_dag.py
docs/: architecture.md  data_dictionary.md
docs/decisions/: 001-no-dbt.md  002-bigquery-not-snowflake.md  003-micro-batch-not-streaming-insert.md  004-csv-as-source-of-truth.md  004-sqlite-as-single-source-of-truth.md
infra/docker/streaming/: Dockerfile
scripts/: compare_csv_sqlite.py
sql/marts/: customer_360.sql  daily_transaction_summary.sql
sql/postgres/ddl/: raw_transactions.sql
sql/raw/: accounts.sql  branches.sql  cards.sql  customers.sql  loans.sql  merchants.sql  transactions.sql
sql/staging/: stg_accounts.sql  stg_branches.sql  stg_cards.sql  stg_customers.sql  stg_loans.sql  stg_merchants.sql  stg_transactions.sql
sql/warehouse/: dim_account.sql  dim_branch.sql  dim_card.sql  dim_customer.sql  dim_loan.sql  dim_merchant.sql  fact_transaction.sql
src/api/: dependencies.py  main.py
src/api/routers/: customers_router.py  (+1 more)
src/domains/: configs.py
src/infrastructure/: alerting.py  bigquery_client.py  config.py  logger.py  pipeline.py  postgres_client.py  quality.py
src/streaming/: consumer.py  producer.py  schemas.py
tests/integration/: test_bigquery_connection.py
tests/unit/: test_pipeline.py  test_placeholder.py  test_quality.py  test_schemas.py
(+38 files in other folders)
